--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "memorystore": "^1.6.7",
     "mongoose": "^8.20.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
@@ -70,6 +71,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "resend": "^6.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
@@ -90,6 +92,7 @@
     "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "20.16.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
